--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -23,13 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "np.set_printoptions(suppress=True)\n",
     "\n",
@@ -45,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_test_data = pd.read_csv(\"train.csv\").dropna(axis=0)\n",
-    "kaggle_submission_data = pd.read_csv(\"test.csv\")"
+    "train_test_data = pd.read_csv(\"./data/train.csv\").dropna(axis=0)\n",
+    "kaggle_submission_data = pd.read_csv(\"./data/test.csv\")"
    ]
   },
   {
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +131,7 @@
        "(1, 29400)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,16 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'10.29 %'"
+       "'10.27 %'"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,13 +403,6 @@
    "source": [
     "accuracy"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -429,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
